--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -30,7 +30,7 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
-    <title>본주지수</title>
+    <title>본주짓수 | BON JIU JITSU</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
